
[TestGetCommand/shows_only_the_marked_windows - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: ""
      app-name: app1
      window-id: 1
      window-title: title1
      workspace: ""
    - app-bundle-id: ""
      app-name: app2
      window-id: 2
      window-title: title2
      workspace: ""
    - app-bundle-id: ""
      app-name: app3
      window-id: 3
      window-title: title3
      workspace: ""

Command:
  $ aerospace-marks get mark1

Result:
  stdout:
    1 | app1 | title1
  stderr: ""
---

[TestGetCommand/shows_only_the_marked_windows_id - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: ""
      app-name: app1
      window-id: 1
      window-title: title1
      workspace: ""
    - app-bundle-id: ""
      app-name: app2
      window-id: 2
      window-title: title2
      workspace: ""
    - app-bundle-id: ""
      app-name: app3
      window-id: 3
      window-title: title3
      workspace: ""

Command:
  $ aerospace-marks get mark1 --window-id

Result:
  stdout:
    1
  stderr: ""
---

[TestGetCommand/shows_only_the_marked_windows_app-name - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: ""
      app-name: app1
      window-id: 1
      window-title: title1
      workspace: ""
    - app-bundle-id: ""
      app-name: app2
      window-id: 2
      window-title: title2
      workspace: ""
    - app-bundle-id: ""
      app-name: app3
      window-id: 3
      window-title: title3
      workspace: ""

Command:
  $ aerospace-marks get mark1 -a

Result:
  stdout:
    app1
  stderr: ""
---

[TestGetCommand/shows_only_the_marked_windows_app-bundle-id - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: bundle1
      app-name: app1
      window-id: 1
      window-title: title1
      workspace: ""
    - app-bundle-id: bundle2
      app-name: app2
      window-id: 2
      window-title: title2
      workspace: ""
    - app-bundle-id: bundle3
      app-name: app3
      window-id: 3
      window-title: title3
      workspace: ""

Command:
  $ aerospace-marks get mark1 --app-bundle-id

Result:
  stdout:
    bundle1
  stderr: ""
---

[TestGetCommand/snapshot_test_for_text_output_format - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: com.test.app
      app-name: Test App
      window-id: 1
      window-title: Test Window Title
      workspace: workspace1
    - app-bundle-id: com.another.app
      app-name: Another App
      window-id: 2
      window-title: Another Window
      workspace: workspace2

Command:
  $ aerospace-marks get mark1 -o text

Result:
  stdout:
    1 | Test App | Test Window Title
  stderr: ""
---

[TestGetCommand/snapshot_test_for_JSON_output_format - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: com.test.app
      app-name: Test App
      window-id: 1
      window-title: Test Window Title
      workspace: workspace1
    - app-bundle-id: com.another.app
      app-name: Another App
      window-id: 2
      window-title: Another Window
      workspace: workspace2

Command:
  $ aerospace-marks get mark1 -o json

Result:
  stdout:
    {
      "command": "get",
      "action": "",
      "window_id": 1,
      "app_name": "Test App",
      "workspace": "workspace1",
      "target_workspace": "",
      "result": "1 | Test App | Test Window Title",
      "message": "Test Window Title"
    }
  stderr: ""
---

[TestGetCommand/snapshot_test_for_CSV_output_format - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: com.test.app
      app-name: Test App
      window-id: 1
      window-title: Test Window Title
      workspace: workspace1
    - app-bundle-id: com.another.app
      app-name: Another App
      window-id: 2
      window-title: Another Window
      workspace: workspace2

Command:
  $ aerospace-marks get mark1 -o csv

Result:
  stdout:
    command,action,window_id,app_name,workspace,target_workspace,result,message
    get,,1,Test App,workspace1,,1 | Test App | Test Window Title,Test Window Title
  stderr: ""
---

[TestGetCommand/snapshot_test_for_single_field_JSON_output - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: com.test.app
      app-name: Test App
      window-id: 1
      window-title: Test Window Title
      workspace: workspace1

Command:
  $ aerospace-marks get mark1 --window-title -o json

Result:
  stdout:
    {
      "command": "get",
      "action": "",
      "window_id": 1,
      "app_name": "",
      "workspace": "",
      "target_workspace": "",
      "result": "Test Window Title",
      "message": "Test Window Title"
    }
  stderr: ""
---

[TestGetCommand/snapshot_test_for_single_field_CSV_output - 1]
Context:
  marks:
    - mark: mark1
      window_id: 1
  windows:
    - app-bundle-id: com.test.app
      app-name: Test App
      window-id: 1
      window-title: Test Window Title
      workspace: workspace1

Command:
  $ aerospace-marks get mark1 --app-name -o csv

Result:
  stdout:
    command,action,window_id,app_name,workspace,target_workspace,result,message
    get,,1,Test App,,,Test App,Test App
  stderr: ""
---
